data/repos_history/AleCigolini/video-processing-consumer-service/2025-09-30T03:42:18Z/kubernetes/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-processing
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: video-processing
  template:
    metadata:
      labels:
        app: video-processing
    spec:
      containers:
        - name: video-processing
          image: alecigolini/video-processing:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "800m"
              memory: "2Gi"
            limits:
              cpu: "900m"
              memory: "2Gi"
          readinessProbe:
            httpGet:
              path: /video-processing/health/ready
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /video-processing/health/live
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: video-processing-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: video-processing
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: video-processing-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /video-processing
            pathType: Prefix
            backend:
              service:
                name: video-processing-service
                port:
                  number: 80
